# adventure

./: CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md
adventure/: Cargo.toml
adventure-test/: Cargo.toml
adventure-test/examples/: rusoto.rs
adventure-test/src/: lib.rs  paginator.rs  retry.rs
adventure/examples/: rusoto.rs
adventure/src/: compat.rs  lib.rs  oneshot.rs  paginator.rs  prelude.rs  repeat.rs  request.rs  response.rs  util.rs
adventure/src/retry/: backoff.rs  error.rs  impls.rs  mod.rs  tokio.rs
adventure/src/task/: internal.rs  mod.rs
src/: adaptor.rs  compat.rs  lib.rs  paginator.rs  prelude.rs  repeat.rs  request.rs  response.rs  util.rs
src/compat/: internal.rs  mod.rs  poll.rs
src/retry/: backoff.rs  error.rs  impls.rs  mod.rs  tokio.rs  util.rs
src/task/: mod.rs
src/test/: mod.rs  paginator.rs  retry.rs
test-futures01/: Cargo.toml
test-futures01/src/: paginator.rs
test-std-futures/: Cargo.toml
test-std-futures/src/: paginator.rs
tools/git-hooks/: pre-commit  pre-push
vendors/rusoto-codedeploy/: Cargo.toml
vendors/rusoto-codedeploy/src/: lib.rs
vendors/rusoto-ecs/: Cargo.toml
vendors/rusoto-ecs/src/: lib.rs
vendors/rusoto-sns/: Cargo.toml
vendors/rusoto-sns/src/: lib.rs
vendors/rusoto-sqs/: Cargo.toml
vendors/rusoto-sqs/src/: lib.rs
