[package]
name = "adventure"
version = "0.1.0"
description = "Helps your great adventure for the various type of requests."
repository = "https://github.com/spoqa/adventure"
readme = "README.md"
categories = [
    "asynchronous",
    "api-bindings",
    "network-programming",
    "rust-patterns",
    "web-programming::http-client",
]
authors = ["Eunchong Yu <gracie@spoqa.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["futures01"]
futures01 = ["futures"]
std-futures = ["futures-core-preview", "futures-util-preview"]
std-futures-test = ["std-futures", "futures-executor-preview"]

[dependencies]
pin-utils = "0.1.0-alpha.4"

[dependencies.futures]
version = "0.1.25"
optional = true

[dependencies.futures-core-preview]
version = "0.3.0-alpha.13"
optional = true

[dependencies.futures-util-preview]
version = "0.3.0-alpha.13"
optional = true

[dependencies.futures-executor-preview]
version = "0.3.0-alpha.13"
optional = true

[dev-dependencies.tokio]
version = "0.1"

[package.metadata.docs.rs]
features = ["std-futures"]
