[package]
name = "adventure-test"
version = "0.1.0"
authors = ["Eunchong Yu <gracie@spoqa.com>"]
edition = "2018"
publish = false

[lib]
doc = false

[features]
default = ["adventure/backoff-tokio"]

[dependencies.adventure]
path = "../adventure"

[dependencies.futures-preview]
version = "0.3.0-alpha.17"
features = ["compat"]

[dependencies.tokio]
version = "0.1"
optional = true

[dependencies.tokio-timer]
version = "0.2"
optional = true

[dev-dependencies]
adventure-rusoto-ecs = "0.3.0-alpha.0"
tokio = "0.1"
rusoto_core = "0.40"
rusoto_ecs = "0.40"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]
