[package]
name = "adventure-test"
version = "0.1.0"
authors = ["Eunchong Yu <gracie@spoqa.com>"]
edition = "2018"
publish = false

[lib]
doc = false

[features]
default = ["adventure/backoff-tokio"]

[dependencies.adventure]
path = "../adventure"

[dependencies.futures]
version = "0.3.1"
features = ["compat"]

[dependencies.tokio]
version = "0.2.6"
optional = true

[dependencies.tokio-timer]
version = "0.2.12"
optional = true

[dev-dependencies]
rusoto_core = "0.42.0"
rusoto_ecs = "0.42.0"

[dev-dependencies.tokio]
version = "0.2.6"
features = ["full"]

[dev-dependencies.adventure-rusoto-ecs]
path = "../vendors/rusoto-ecs"

[dev-dependencies.serde]
version = "1.0.104"
features = ["derive"]
