[package]
workspace = ".."
name = "adventure"
version = "0.4.0-alpha.0"
description = "Helps your great adventure for the various type of requests."
repository = "https://github.com/spoqa/adventure"
readme = "../README.md"
categories = [
    "asynchronous",
    "network-programming",
    "rust-patterns",
]
authors = ["Eunchong Yu <gracie@spoqa.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["backoff-tokio"]
futures01 = ["futures"]
backoff-tokio = ["futures01", "backoff", "tokio", "tokio-timer"]

[dependencies]
pin-utils = "0.1.0-alpha.4"

[dependencies.backoff]
version = "0.1.5"
optional = true

[dependencies.futures]
version = "0.1.28"
optional = true

[dependencies.futures-core-preview]
version = "0.3.0-alpha.17"

[dependencies.futures-util-preview]
version = "0.3.0-alpha.17"
features = ["compat"]

[dependencies.tokio]
version = "0.1"
optional = true

[dependencies.tokio-timer]
version = "0.2"
optional = true

[dev-dependencies]
adventure-rusoto-ecs = "0.2"
tokio = "0.1"
reqwest = "0.9"
rusoto_core = "0.37"
rusoto_ecs = "0.37"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]
