[package]
workspace = ".."
name = "adventure"
version = "0.4.0-alpha.0"
description = "Helps your great adventure for the various type of requests."
repository = "https://github.com/spoqa/adventure"
readme = "../README.md"
categories = [
    "asynchronous",
    "network-programming",
    "rust-patterns",
]
authors = ["Eunchong Yu <gracie@spoqa.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["backoff-tokio", "std"]
std = ["alloc", "futures-core-preview/std", "futures-util-preview/std"]
alloc = []
futures01 = ["futures", "std", "futures-util-preview/compat"]
backoff-tokio = ["futures01", "backoff", "tokio", "tokio-timer"]

[dependencies]
pin-utils = "0.1.0-alpha.4"

[dependencies.backoff]
version = "0.1.5"
optional = true

[dependencies.futures]
version = "0.1.28"
default-features = false
optional = true

[dependencies.futures-core-preview]
version = "0.3.0-alpha.17"
default-features = false

[dependencies.futures-util-preview]
version = "0.3.0-alpha.17"
default-features = false

[dependencies.reqwest]
version = "0.9"
optional = true

[dependencies.tokio]
version = "0.1"
optional = true

[dependencies.tokio-timer]
version = "0.2"
optional = true
