[package]
workspace = ".."
name = "test-std-futures"
version = "0.1.0"
authors = ["Eunchong Yu <gracie@spoqa.com>"]
edition = "2018"
publish = false

[dependencies]
futures-core-preview = "0.3.0-alpha.13"
futures-executor-preview = "0.3.0-alpha.13"
futures-util-preview = "0.3.0-alpha.13"

[dependencies.adventure]
path = ".."
default-features = false
features = ["std-futures"]
