[package]
workspace = "../.."
name = "adventure-rusoto-codedeploy"
version = "0.1.0"
description = "Adventure to rusoto_ecs"
repository = "https://github.com/spoqa/adventure"
categories = [
    "asynchronous",
    "api-bindings",
    "network-programming",
    "web-programming::http-client",
]
authors = ["rusty <rusty@spoqa.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls", "rusoto_codedeploy/native-tls"]
rustls = ["rusoto_core/rustls", "rusoto_codedeploy/rustls"]

[dependencies]
adventure = { version = "0.5.0", path = "../../adventure" }
rusoto_core = { version = "0.42.0", default-features = false }
rusoto_codedeploy = { version = "0.42.0", default-features = false }
